[package]
name = "websocket-chat-react-rust" # The name here should be whatever you've decided to name your project
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hyper = { version = "1.4.1", features = ["client", "http2"] }
hyper-tls = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-secrets = "0.42.0"
sync_wrapper = "1.0.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["auth"] }
